<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Navigation codelab</string>

    <!-- Menu strings -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="deeplink">Deep Link</string>

    <!-- Screen strings -->
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment</string>
    <string name="shopping_fragment_text">Shopping Fragment</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>
    <string name="no_items_in_the_shopping_cart">No items in the shopping cart</string>
    <string name="add_query_to_database">Add query to database</string>
    <string name="database">Database</string>
    <string name="textttttttttttttttttttttttttttttttt">TEXTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT</string>
    <string name="textview">TextView</string>
</resources>
